--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (390.87-7) UNRELEASED; urgency=medium
+
+  * Updated French (fr) debconf translations by Quentin Lejard.
+    (Closes: #920940)
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Jan 2019 17:03:01 +0100
+
 nvidia-graphics-drivers (390.87-6) unstable; urgency=medium
 
   [ Luca Boccassi ]
