--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (390.87-7) UNRELEASED; urgency=medium
   * Tune package relationships to prevent that installing packages from
     nvidia-graphics-drivers-legacy-390xx driver pulls in packages from
     nvidia-graphics-drivers via Recommends.
+  * Drop versioned constraints that are satisfied in wheezy.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Jan 2019 17:03:01 +0100
 
