--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (390.87-7) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.87-7) unstable; urgency=medium
 
   * Updated French (fr) debconf translations by Quentin Lejard.
     (Closes: #920940)
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (390.87-7) UNRELEASED; urgency=medium
     nvidia-graphics-drivers via Recommends.
   * Drop versioned constraints that are satisfied in wheezy.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Jan 2019 17:03:01 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 02 Feb 2019 15:24:09 +0100
 
 nvidia-graphics-drivers (390.87-6) unstable; urgency=medium
 
