--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (410.93-2) UNRELEASED; urgency=medium
+
+  * Add slave alternative for libnvoptix.so.1.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 03 Feb 2019 00:31:10 +0100
+
 nvidia-graphics-drivers (410.93-1) experimental; urgency=medium
 
   * New upstream long lived branch release 410.93 (2019-01-03).
