--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ nvidia-graphics-drivers (418.30-1~git1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
   * Update symbols files.
+  * libnvidia-opticalflow1: New package for the NVIDIA Optical Flow runtime
+    library.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 31 Jan 2019 15:43:15 +0100
 
