--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-nvidia-graphics-drivers (410.93-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (410.93-2) unstable; urgency=medium
 
   * Merge changes from 396.54-4.
   * Add slave alternative for libnvoptix.so.1.
   * Restrict watch file to releases from the 410.xx long lived branch.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 03 Feb 2019 00:31:10 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 11 Feb 2019 17:15:09 +0100
 
 nvidia-graphics-drivers (410.93-1) experimental; urgency=medium
 
