--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ nvidia-graphics-drivers (390.116-1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Drop kmem_cache_create_usercopy.patch, drm-mode.patch,
     ipmi-user.patch, vm-insert-pfn.patch: fixed upstream.
+  * Update symbols files.
 
   [ Andreas Beckmann ]
   * nvidia-detect: stretch now has a 390.xx driver.
