--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (390.87-9) UNRELEASED; urgency=medium
+
+  * nvidia-detect: stretch now has a 390.xx driver.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 22 Feb 2019 00:52:50 +0100
+
 nvidia-graphics-drivers (390.87-8~deb9u1) stretch; urgency=medium
 
   * Rebuild for stretch.
