new upstream legacy branch release 390.116

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,35 @@
-nvidia-graphics-drivers (390.87-9) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (390.116-1) UNRELEASED; urgency=medium
 
+  * New upstream legacy branch release 390.116 (2019-02-22).
+    - Fixed build failures which resulted in errors like "implicit declaration
+      of function drm_...", when building the NVIDIA DRM kernel module for Linux
+      kernel 5.0 release candidates.
+    - Fixed a bug which could cause VK_KHR_external_semaphore_fd operations
+      to fail.
+    - Fixed a build failure, "implicit declaration of function
+      'vm_insert_pfn'", when building the NVIDIA DRM kernel module for Linux
+      kernel 4.20 release candidates.
+    - Fixed a build failure, "unknown type name 'ipmi_user_t'", when building
+      the NVIDIA kernel module for Linux kernel 4.20 release candidates.
+    - Fixed a bug that caused mode switches to fail when an SDI output board was
+      connected.
+    - Fixed a bug that could cause rendering corruption in Vulkan programs.
+    - Fixed a bug that caused vkGetPhysicalDeviceDisplayPropertiesKHR() to
+      occasionally return incorrect values for physicalResolution.
+  * New upstream legacy branch release 340 series.
+    - Fixed a build failure, "too many arguments to function 'get_user_pages'",
+      when building the NVIDIA kernel module for Linux kernel v4.4.168.
+    - Fixed a build failure, "implicit declaration of function do_gettimeofday",
+      when building the NVIDIA kernel module for Linux kernel 5.0 release
+      candidates.
+    - Added a new kernel module parameter, NVreg_RestrictProfilingToAdminUsers,
+      to allow restricting the use of GPU performance counters to system
+      administrators only.  (Closes: #913467)
+
+  [ Andreas Beckmann ]
   * nvidia-detect: stretch now has a 390.xx driver.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 22 Feb 2019 00:52:50 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 28 Feb 2019 10:31:41 +0100
 
 nvidia-graphics-drivers (390.87-8~deb9u1) stretch; urgency=medium
 
