--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (410.104-2) UNRELEASED; urgency=medium
+
+  * libcuda1: Add Provides: libcuda-10.0-1{,-i386}.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Mar 2019 17:41:52 +0100
+
 nvidia-graphics-drivers (410.104-1) unstable; urgency=medium
 
   * New upstream long lived branch release 410.104 (2019-02-22).
