--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ nvidia-graphics-drivers (418.56-1~git1) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Update nv-readme.ids.
 
+  [ Andreas Beckmann ]
+  * libcuda1: Add Provides: libcuda-10.1-1{,-i386}.
+
  -- Andreas Beckmann <anbe@debian.org>  Sun, 24 Mar 2019 15:49:56 +0100
 
 nvidia-graphics-drivers (418.43-1) experimental; urgency=medium
