--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (410.104-2) UNRELEASED; urgency=medium
 
   * libcuda1: Add Provides: libcuda-10.0-1{,-i386}.
   * [i386 armhf]: Drop nvidia-legacy-check.
+  * [i386 armhf]: Reinstate nvidia-driver, xserver-xorg-video-nvidia as
+    transitional packages depending on the 390.xx legacy driver.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 16 Mar 2019 17:41:52 +0100
 
