--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (415.27-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (415.27-2) unstable; urgency=medium
 
   * Merge changes from 410.104-3.
+  * Upload to unstable.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 20 Apr 2019 07:38:21 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 20 Apr 2019 08:11:31 +0200
 
 nvidia-graphics-drivers (415.27-1) experimental; urgency=medium
 
