--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (430.09-1~git1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
   * Update symbols files.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 26 Apr 2019 16:58:57 +0200
 
