--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (418.74-1) UNRELEASED; urgency=medium
   * Refresh patches.
   * Restrict watch file to releases from the 418.xx long lived branch.
   * Remove support for arch-specific nv-readme.ids.
+  * Tune Recommends to smoothen some upgrade paths on i386.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 08 May 2019 09:53:19 +0200
 
