--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (418.74-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (418.74-1) unstable; urgency=medium
 
   * New upstream long lived branch release 418.74 (2019-05-07).
     - Added support for the following GPUs: Quadro P2200, GeForce GTX 1650,
@@ -12,7 +12,7 @@ nvidia-graphics-drivers (418.74-1) UNRELEASED; urgency=medium
   * Remove support for arch-specific nv-readme.ids.
   * Tune Recommends to smoothen some upgrade paths on i386.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 08 May 2019 09:53:19 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 11 May 2019 13:52:38 +0200
 
 nvidia-graphics-drivers (418.56-2) unstable; urgency=medium
 
