--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+nvidia-graphics-drivers (430.26-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 430.26 (2019-06-10).
+  * New upstream release 418 series.
+    - Added support for the following GPUs: Quadro P520, Quadro RTX 3000,
+      Quadro T1000, Quadro T2000.
+    - Fixed a bug, introduced in 415.13, that caused audio over DisplayPort to
+      not work in some configurations.
+
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 13 Jun 2019 09:08:03 +0200
+
 nvidia-graphics-drivers (430.14-1) experimental; urgency=medium
 
   * New upstream long lived branch release 430.14 (2019-05-14).
