--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (430.26-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (430.26-1) experimental; urgency=medium
 
   * New upstream long lived branch release 430.26 (2019-06-10).
   * New upstream release 418 series.
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (430.26-1) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 13 Jun 2019 09:08:03 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 13 Jun 2019 12:18:57 +0200
 
 nvidia-graphics-drivers (430.14-1) experimental; urgency=medium
 
