--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ nvidia-graphics-drivers (390.132-1) UNRELEASED; urgency=medium
   * Insert '-' between suffix ending with digit and SOVERSION (435.21-3).
   * Rename "legacy" variables to more generic "variant" (440.44-2).
   * Bump Standards-Version to 4.5.0. No changes needed.
+  * *.symbols: List libraries from src:libglvnd (not in stretch) as second
+    (instead of preferred) alternative dependencies.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 10 Nov 2019 12:53:49 +0100
 
