--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ nvidia-graphics-drivers (390.129-1) UNRELEASED; urgency=medium
     - Updated nvidia-bug-report.sh to search the systemd journal for
       gdm-x-session logs.
 
+  [ Andreas Beckmann ]
+  * Bump Standards-Version to 4.4.0. No changes needed.
+
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Aug 2019 19:04:49 +0200
 
 nvidia-graphics-drivers (390.116-1) stretch; urgency=medium
