--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,15 @@
+nvidia-graphics-drivers (430.40-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 430.40 (2019-07-29).
+    - Added support for the following GPU: GeForce RTX 2080 SUPER.
+    - Fixed a driver installation failure in Linux kernel configurations
+      with CONFIG_HOTPLUG_CPU.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 13 Aug 2019 01:18:30 +0200
+
 nvidia-graphics-drivers (430.34-1) experimental; urgency=medium
 
-  * New upstream long lived branch release 430.26 (2019-07-09).
+  * New upstream long lived branch release 430.34 (2019-07-09).
     - Added support for the following GPUs: GeForce RTX 2060 SUPER,
       GeForce RTX 2070 SUPER.
 
