--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,7 @@ nvidia-graphics-drivers (435.17-1~git1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
   * Remove non-GLVND packages.
+  * nvidia-vulkan-common: Ship nvidia_layers.json.
 
  -- Luca Boccassi <bluca@debian.org>  Fri, 16 Aug 2019 11:39:05 +0100
 
